--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,6 @@ deploy:
    expire_in: 31d
    when: always
    paths:
-    - target/Assignment2-0-0.1-SNAPSHOT.jar
+    - target/Assignment2-0.0.1-SNAPSHOT.jar
   only:
     - master
